
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.up.ling</groupId>
  <artifactId>alto</artifactId>
  <packaging>jar</packaging>
  <version>2.2-SNAPSHOT</version>
  <name>alto</name>
  <url>http://maven.apache.org</url>

  <properties>
    <antlr.version>4.5.1</antlr.version>
    <assembly.version>2.4</assembly.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <additionalparam>-Xdoclint:none</additionalparam>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>de.saar.coli</groupId>
      <artifactId>basics</artifactId>
      <version>[1.2.37-SNAPSHOT,)</version>
    </dependency>
<!--  -->
<dependency>
    
	<groupId>org.springframework</groupId>
	<artifactId>spring-jdbc</artifactId>
	<version>4.2.2.RELEASE</version>
    </dependency>
    
    <dependency>
	<groupId>mysql</groupId>
	<artifactId>mysql-connector-java</artifactId>
	<version>5.1.37</version>
    </dependency>
    
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>15.0</version>
    </dependency>

    <dependency> <!-- prerequisite for Guava >= 13 when using Scala -->
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.0</version>
    </dependency>
    
    <dependency>
      <groupId>cc.mallet</groupId>
      <artifactId>mallet</artifactId>
      <version>2.0.7</version>
    </dependency>
    
    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>fastutil</artifactId>
      <version>6.6.1</version>
    </dependency>

    <dependency>
      <groupId>org.simplericity.macify</groupId>
      <artifactId>macify</artifactId>
      <version>1.4</version>
    </dependency>
    
    <dependency>
      <groupId>com.bric.window</groupId>
      <artifactId>windowmenu</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.2.3</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.2.3</version>
    </dependency>

    <dependency>
      <groupId>net.sf.jgrapht</groupId>
      <artifactId>jgrapht</artifactId>
      <version>0.8.3</version>
    </dependency>

    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr.version}</version>
    </dependency>

    <dependency>
      <groupId>jgraph</groupId>
      <artifactId>jgraph</artifactId>
      <version>5.13.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.ezware.oxbow</groupId>
      <artifactId>task-dialog</artifactId>
      <version>1.3.5</version>
    </dependency>

    <dependency>
	<groupId>com.miglayout</groupId>
	<artifactId>miglayout</artifactId>
	<version>3.7.4</version>
    </dependency>

    <dependency>
      <groupId>org.swinglabs</groupId>
      <artifactId>swing-layout</artifactId>
      <version>1.0.3</version>
    </dependency>

    <dependency>
      <groupId>com.beust</groupId>
      <artifactId>jcommander</artifactId>
      <version>1.48</version>
    </dependency>

    <dependency>
      <groupId>com.diffplug.durian</groupId>
      <artifactId>durian</artifactId>
      <version>3.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.2</version>
    </dependency>
    
  
    <!-- testing dependencies -->
    <dependency> <!-- hamcrest before junit to get dependencies right -->
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>groovy-all</artifactId>
      <groupId>org.codehaus.groovy</groupId>
      <version>2.0.5</version>
      <scope>test</scope>
    </dependency>




  </dependencies>

  <build>
    <!-- filter build.properties to add buildnumber -->
    <resources>
      <resource>
	<directory>src/main/resources</directory>
	<filtering>true</filtering>
	<includes>
	  <include>**/build.properties</include>
	</includes>
      </resource>
      <resource>
	<directory>src/main/resources</directory>
	<filtering>false</filtering>
	<excludes>
	  <exclude>**/build.properties</exclude>
	</excludes>
      </resource>
    </resources>

    <plugins>
      <!-- use more recent version of compiler plugin so we can do incremental compilation despite filtering -->
      <plugin>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.1</version>
	<configuration>
	  <source>1.8</source>
	  <target>1.8</target>
	  <useIncrementalCompilation>yes</useIncrementalCompilation>
	</configuration>
      </plugin>

      <!-- buildnumber plugin: add hg revision to a properties file -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.3</version>
	<!-- -->
	<configuration>
	  <doCheck>false</doCheck>
          <doUpdate>false</doUpdate>
	  <revisionOnScmFailure>unknownRevision</revisionOnScmFailure>
	  <format>{1,date,yyyy-MM-dd HH:mm} {0}</format>
	  <items>
	    <item>scmVersion</item>
            <item>timestamp</item>
	  </items>
        </configuration>
	<!-- -->
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        
      </plugin>

      <!-- Groovy plugin for unit tests -->
      <plugin>
        <groupId>org.codehaus.gmaven</groupId>
        <artifactId>gmaven-plugin</artifactId>
        <version>1.3</version>
        <configuration>
          <providerSelection>1.7</providerSelection>
        </configuration>
        <executions>
          <execution>
            <goals>          
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.gmaven.runtime</groupId>
            <artifactId>gmaven-runtime-1.7</artifactId>
            <version>1.3</version>
            <exclusions>
              <exclusion>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
              </exclusion>
            </exclusions>
          </dependency>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>1.8.6</version>
          </dependency>
        </dependencies>
      </plugin>

      <!-- ANTLR4 plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>target/generated-sources/antlr4</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>antlr4</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- JavaCC plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>javacc-maven-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <id>javacc</id>
            <goals>
              <goal>javacc</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Javadoc plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
	  <sourceFileExcludes>
	    <sourceFileExclude>**/de/up/ling/irtg/codec/*Listener*</sourceFileExclude>
	  </sourceFileExcludes>
          <show>public</show>
          <!-- Ideally, one would like to use detectLinks and link
          elements; but for some reason that doesn't seem to work with
          Java 8. Replacing with offline links temporarily. -->
          <offlineLinks>
            <offlineLink>
              <url>http://fastutil.di.unimi.it/docs/</url>
              <location>http://fastutil.di.unimi.it/docs/</location>
            </offlineLink>
            <offlineLink>
              <url>http://www.ling.uni-potsdam.de/tcl/basics/apidocs/</url>
              <location>http://www.ling.uni-potsdam.de/tcl/basics/apidocs/</location>
            </offlineLink>
            <offlineLink>
              <url>http://docs.guava-libraries.googlecode.com/git-history/v15.0/javadoc/</url>
              <location>http://docs.guava-libraries.googlecode.com/git-history/v15.0/javadoc/</location>
            </offlineLink>
            <offlineLink>
              <url>http://docs.oracle.com/javase/8/docs/api/</url>
              <location>http://docs.oracle.com/javase/8/docs/api/</location>
            </offlineLink>
          </offlineLinks>
          <detectLinks>false</detectLinks>
        </configuration>
      </plugin>

      <!-- Scala plugin -->
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>3.1.5</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <scalaVersion>2.10.2</scalaVersion>
          <compileOrder>JavaThenScala</compileOrder>
          <excludes>
            <exclude>**/*.java</exclude>
          </excludes>
          <recompileMode>modified-only</recompileMode>
          <jvmArgs>
            <jvmArg>-Xms64m</jvmArg>
            <jvmArg>-Xmx1024m</jvmArg>
          </jvmArgs>
          <javacArgs>
            <javacArg>-Xlint:unchecked</javacArg>
            <javacArg>-Xlint:deprecation</javacArg>
            <javacArg>-XX:MaxPermSize=128M</javacArg>
          </javacArgs>
        </configuration>
      </plugin>

      <!-- Findbugs plugin configuration for Jenkins -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
          <xmlOutput>true</xmlOutput>
        </configuration>
      </plugin>

      <!-- Assembly plugin -->
      <plugin>
	<artifactId>maven-assembly-plugin</artifactId>
	<version>${assembly.version}</version>
	<configuration>
	  <archive>
	    <manifest>
	      <mainClass>de.up.ling.irtg.main.Alto</mainClass>
	    </manifest>
	  </archive>
	  <descriptorRefs>
	    <descriptorRef>jar-with-dependencies</descriptorRef>
	  </descriptorRefs>
	</configuration>
	<executions>
	  <execution>
	    <phase>package</phase>
	    <goals>
	      <goal>single</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>
<!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>

        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
-->

    </plugins>

    <!-- some more config -->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${antlr.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh-external</artifactId>
        <version>1.0-beta-6</version>
      </extension>
    </extensions>
  </build>


  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>tcl-artifactory-release</id>
      <name>tcl-artifactory-release</name>
      <url>http://akci.coli.uni-saarland.de/artifactory/release</url>
    </repository>
    
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>tcl-artifactory-snapshots</id>
      <name>tcl-artifactory-snapshots</name>
      <url>http://akci.coli.uni-saarland.de/artifactory/snapshots</url>
    </repository>

    <repository>
      <id>tcl-artifactory-external</id>
      <name>tcl-artifactory-external</name>
      <url>http://akci.coli.uni-saarland.de/artifactory/external</url>
    </repository>


    

    <!-- legacy repositories -->

    <repository>
      <id>tcl-releases</id>
      <name>TCL releases</name>
      <url>http://www.ling.uni-potsdam.de/tcl/maven2/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>


    <repository>
      <id>tcl-external</id>
      <name>TCL external libraries</name>
      <url>http://www.ling.uni-potsdam.de/tcl/maven2/external</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>tcl-repository</id>
      <name>Potsdam TCL Maven repository</name>
      <url>scpexe://tcl@bramaputra.ling.uni-potsdam.de//home/tcl/tcl-web/maven2/releases</url>
    </repository>

    <site>
      <id>irtg-site</id>
      <name>Potsdam IRTG website</name>
      <url>scpexe://tcl@bramaputra.ling.uni-potsdam.de//home/tcl/tcl-web/irtg</url>
    </site>
    
    <downloadUrl>http://www.ling.uni-potsdam.de/tcl/maven2/releases</downloadUrl>
  </distributionManagement>


      <scm>
      <developerConnection>scm:hg:https://bitbucket.org/tclup/alto</developerConnection>
        <tag>HEAD</tag>
  </scm>
</project>


<!--


  <profiles>
    <profile>
      <id>fatjar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>zip</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>${assembly.version}</version>
            <configuration>
              <descriptors>
                <descriptor>zip.xml</descriptor>
              </descriptors>
            </configuration>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

-->
